infrastructure/controllers/base/longhorn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-backend
  namespace: longhorn-system
  labels:
    app: longhorn-manager
spec:
  type: NodePort
  ports:
    - name: manager
      port: 9500
      protocol: TCP
      targetPort: manager
  selector:
    app: longhorn-manager
