infrastructure/controllers/base/longhorn/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: longhorn-ui
      ports:
        - protocol: TCP
          port: 9500
